Python try it now (#187)
* Building wheel files

* Created abstract base class for runtimes

* Wired up try it now

* More wheel plumbing

* Wired up web worker for python

* First draft of working worker

* Wired up events

* Wired up logging

* Bug fix

* Rebuilt examples

* Python support in GA

* Cache pip deps

* Safer way of calling poetry

* Updated test

* Log poetry error

* Better caching

--- a/examples/docusaurus/docs/mistral/api/endpoint/audio/transcriptions.mdx
+++ b/examples/docusaurus/docs/mistral/api/endpoint/audio/transcriptions.mdx
@@ -6,7 +6,6 @@ sidebar_label: Audio Transcriptions
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   CodeSampleTab,
   CodeSampleTabbedSection,
   DebugPlaceholder,
@@ -139,26 +138,12 @@ Python
   id="operation-audio_api_v1_transcriptions_post+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.audio.transcriptions.complete(model="Model X")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.audio.transcriptions.complete(model=&quot;Model X&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -2085,28 +2070,12 @@ Python
   id="operation-audio_api_v1_transcriptions_post_stream+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.audio.transcriptions.stream(model="Camry")
-
-    with res as event_stream:
-        for event in event_stream:
-            # handle event
-            print(event, flush=True)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.audio.transcriptions.stream(model=&quot;Camry&quot;)&NewLine;&NewLine;    with res as event_stream:&NewLine;        for event in event_stream:&NewLine;            # handle event&NewLine;            print(event, flush=True)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
