--- a/examples/docusaurus/docs/mistral/api/endpoint/beta/agents.mdx
+++ b/examples/docusaurus/docs/mistral/api/endpoint/beta/agents.mdx
@@ -6,7 +6,6 @@ sidebar_label: Beta Agents
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   CodeSampleTab,
   CodeSampleTabbedSection,
   DebugPlaceholder,
@@ -124,26 +123,12 @@ Python
 
 <SectionContent slot="content" id="operation-agents_api_v1_agents_list+code-samples+python">
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.beta.agents.list(page=0, page_size=20)
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.beta.agents.list(page=0, page_size=20)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -4609,26 +4594,12 @@ Python
 
 <SectionContent slot="content" id="operation-agents_api_v1_agents_create+code-samples+python">
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.beta.agents.create(model="LeBaron", name="<value>")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.beta.agents.create(model=&quot;LeBaron&quot;, name=&quot;&lt;value&gt;&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -12106,26 +12077,12 @@ Python
 
 <SectionContent slot="content" id="operation-agents_api_v1_agents_get+code-samples+python">
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.beta.agents.get(agent_id="<id>")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.beta.agents.get(agent_id=&quot;&lt;id&gt;&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -16466,26 +16423,12 @@ Python
 
 <SectionContent slot="content" id="operation-agents_api_v1_agents_update+code-samples+python">
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.beta.agents.update(agent_id="<id>")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.beta.agents.update(agent_id=&quot;&lt;id&gt;&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -24022,26 +23965,12 @@ Python
   id="operation-agents_api_v1_agents_update_version+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.beta.agents.update_version(agent_id="<id>", version=157995)
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.beta.agents.update_version(agent_id=&quot;&lt;id&gt;&quot;, version=157995)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
