--- a/examples/docusaurus/docs/mistral/api/endpoint/classifiers.mdx
+++ b/examples/docusaurus/docs/mistral/api/endpoint/classifiers.mdx
@@ -6,7 +6,6 @@ sidebar_label: Classifiers
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   CodeSampleTab,
   CodeSampleTabbedSection,
   DebugPlaceholder,
@@ -137,29 +136,12 @@ Python
   id="operation-moderations_v1_moderations_post+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.classifiers.moderate(model="Durango", inputs=[
-        "<value 1>",
-        "<value 2>",
-    ])
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.classifiers.moderate(model=&quot;Durango&quot;, inputs=[&NewLine;        &quot;&lt;value 1&gt;&quot;,&NewLine;        &quot;&lt;value 2&gt;&quot;,&NewLine;    ])&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -1559,31 +1541,12 @@ Python
   id="operation-chat_moderations_v1_chat_moderations_post+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.classifiers.moderate_chat(inputs=[
-        {
-            "content": "<value>",
-            "role": "tool",
-        },
-    ], model="LeBaron")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.classifiers.moderate_chat(inputs=[&NewLine;        {&NewLine;            &quot;content&quot;: &quot;&lt;value&gt;&quot;,&NewLine;            &quot;role&quot;: &quot;tool&quot;,&NewLine;        },&NewLine;    ], model=&quot;LeBaron&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -11010,28 +10973,12 @@ Python
   id="operation-classifications_v1_classifications_post+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.classifiers.classify(model="Silverado", inputs=[
-        "<value 1>",
-    ])
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.classifiers.classify(model=&quot;Silverado&quot;, inputs=[&NewLine;        &quot;&lt;value 1&gt;&quot;,&NewLine;    ])&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -12392,35 +12339,12 @@ Python
   id="operation-chat_classifications_v1_chat_classifications_post+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.classifiers.classify_chat(model="Camry", inputs=[
-        {
-            "messages": [
-                {
-                    "content": "<value>",
-                    "role": "system",
-                },
-            ],
-        },
-    ])
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.classifiers.classify_chat(model=&quot;Camry&quot;, inputs=[&NewLine;        {&NewLine;            &quot;messages&quot;: [&NewLine;                {&NewLine;                    &quot;content&quot;: &quot;&lt;value&gt;&quot;,&NewLine;                    &quot;role&quot;: &quot;system&quot;,&NewLine;                },&NewLine;            ],&NewLine;        },&NewLine;    ])&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
