--- a/examples/docusaurus/docs/mistral/api/endpoint/embeddings.mdx
+++ b/examples/docusaurus/docs/mistral/api/endpoint/embeddings.mdx
@@ -6,7 +6,6 @@ sidebar_label: Embeddings
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   CodeSampleTab,
   CodeSampleTabbedSection,
   DebugPlaceholder,
@@ -124,29 +123,12 @@ Python
 
 <SectionContent slot="content" id="operation-embeddings_v1_embeddings_post+code-samples+python">
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.embeddings.create(model="mistral-embed", inputs=[
-        "Embed this sentence.",
-        "As well as this one.",
-    ])
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.embeddings.create(model=&quot;mistral-embed&quot;, inputs=[&NewLine;        &quot;Embed this sentence.&quot;,&NewLine;        &quot;As well as this one.&quot;,&NewLine;    ])&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
