--- a/examples/docusaurus/docs/mistral/api/endpoint/fine-tuning.mdx
+++ b/examples/docusaurus/docs/mistral/api/endpoint/fine-tuning.mdx
@@ -6,7 +6,6 @@ sidebar_label: Fine Tuning
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   CodeSampleTab,
   CodeSampleTabbedSection,
   DebugPlaceholder,
@@ -130,26 +129,12 @@ Python
   id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.fine_tuning.jobs.list(page=0, page_size=100, created_by_me=False)
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.fine_tuning.jobs.list(page=0, page_size=100, created_by_me=False)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -5943,28 +5928,12 @@ Python
   id="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.fine_tuning.jobs.create(model="Camaro", hyperparameters={
-        "learning_rate": 0.0001,
-    }, invalid_sample_skip_percentage=0)
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.fine_tuning.jobs.create(model=&quot;Camaro&quot;, hyperparameters={&NewLine;        &quot;learning_rate&quot;: 0.0001,&NewLine;    }, invalid_sample_skip_percentage=0)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -15377,26 +15346,12 @@ Python
   id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.fine_tuning.jobs.get(job_id="c167a961-ffca-4bcf-93ac-6169468dd389")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.fine_tuning.jobs.get(job_id=&quot;c167a961-ffca-4bcf-93ac-6169468dd389&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -23496,26 +23451,12 @@ Python
   id="operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.fine_tuning.jobs.cancel(job_id="6188a2f6-7513-4e0f-89cc-3f8088523a49")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.fine_tuning.jobs.cancel(job_id=&quot;6188a2f6-7513-4e0f-89cc-3f8088523a49&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -31615,26 +31556,12 @@ Python
   id="operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.fine_tuning.jobs.start(job_id="56553e4d-0679-471e-b9ac-59a77d671103")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.fine_tuning.jobs.start(job_id=&quot;56553e4d-0679-471e-b9ac-59a77d671103&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
