--- a/examples/docusaurus/docs/mistral/api/endpoint/ocr.mdx
+++ b/examples/docusaurus/docs/mistral/api/endpoint/ocr.mdx
@@ -6,7 +6,6 @@ sidebar_label: Ocr
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   CodeSampleTab,
   CodeSampleTabbedSection,
   DebugPlaceholder,
@@ -131,31 +130,12 @@ Python
 
 <SectionContent slot="content" id="operation-ocr_v1_ocr_post+code-samples+python">
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.ocr.process(model="CX-9", document={
-        "image_url": {
-            "url": "https://measly-scrap.com",
-        },
-        "type": "image_url",
-    })
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.ocr.process(model=&quot;CX-9&quot;, document={&NewLine;        &quot;image_url&quot;: {&NewLine;            &quot;url&quot;: &quot;https://measly-scrap.com&quot;,&NewLine;        },&NewLine;        &quot;type&quot;: &quot;image_url&quot;,&NewLine;    })&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
