--- a/examples/docusaurus/docs/mistral/api/endpoint/agents.mdx
+++ b/examples/docusaurus/docs/mistral/api/endpoint/agents.mdx
@@ -6,7 +6,6 @@ sidebar_label: Agents
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   CodeSampleTab,
   CodeSampleTabbedSection,
   DebugPlaceholder,
@@ -137,31 +136,12 @@ Python
   id="operation-agents_completion_v1_agents_completions_post+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.agents.complete(messages=[
-        {
-            "content": "Who is the best French painter? Answer in one short sentence.",
-            "role": "user",
-        },
-    ], agent_id="<id>", stream=False)
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.agents.complete(messages=[&NewLine;        {&NewLine;            &quot;content&quot;: &quot;Who is the best French painter? Answer in one short sentence.&quot;,&NewLine;            &quot;role&quot;: &quot;user&quot;,&NewLine;        },&NewLine;    ], agent_id=&quot;&lt;id&gt;&quot;, stream=False)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
