--- a/examples/docusaurus/docs/mistral/api/endpoint/beta/libraries/documents.mdx
+++ b/examples/docusaurus/docs/mistral/api/endpoint/beta/libraries/documents.mdx
@@ -6,7 +6,6 @@ sidebar_label: Beta Libraries Documents
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   CodeSampleTab,
   CodeSampleTabbedSection,
   DebugPlaceholder,
@@ -127,26 +126,12 @@ Python
 
 <SectionContent slot="content" id="operation-libraries_documents_list_v1+code-samples+python">
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.beta.libraries.documents.list(library_id="5c3ca4cd-62bc-4c71-ad8a-1531ae80d078", page_size=100, page=0, sort_by="created_at", sort_order="desc")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.beta.libraries.documents.list(library_id=&quot;5c3ca4cd-62bc-4c71-ad8a-1531ae80d078&quot;, page_size=100, page=0, sort_by=&quot;created_at&quot;, sort_order=&quot;desc&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -2768,29 +2753,12 @@ Python
 
 <SectionContent slot="content" id="operation-libraries_documents_upload_v1+code-samples+python">
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.beta.libraries.documents.upload(library_id="a02150d9-5ee0-4877-b62c-28b1fcdf3b76", file={
-        "file_name": "example.file",
-        "content": open("example.file", "rb"),
-    })
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.beta.libraries.documents.upload(library_id=&quot;a02150d9-5ee0-4877-b62c-28b1fcdf3b76&quot;, file={&NewLine;        &quot;file_name&quot;: &quot;example.file&quot;,&NewLine;        &quot;content&quot;: open(&quot;example.file&quot;, &quot;rb&quot;),&NewLine;    })&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -5156,26 +5124,12 @@ Python
 
 <SectionContent slot="content" id="operation-libraries_documents_get_v1+code-samples+python">
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.beta.libraries.documents.get(library_id="03d908c8-90a1-44fd-bf3a-8490fb7c9a03", document_id="90973aec-0508-4375-8b00-91d732414745")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.beta.libraries.documents.get(library_id=&quot;03d908c8-90a1-44fd-bf3a-8490fb7c9a03&quot;, document_id=&quot;90973aec-0508-4375-8b00-91d732414745&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -7237,26 +7191,12 @@ Python
 
 <SectionContent slot="content" id="operation-libraries_documents_update_v1+code-samples+python">
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.beta.libraries.documents.update(library_id="3ddd8d93-dca5-4a6d-980d-173226c35742", document_id="2a25e44c-b160-40ca-b5c2-b65fb2fcae34")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.beta.libraries.documents.update(library_id=&quot;3ddd8d93-dca5-4a6d-980d-173226c35742&quot;, document_id=&quot;2a25e44c-b160-40ca-b5c2-b65fb2fcae34&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -9445,25 +9385,12 @@ Python
 
 <SectionContent slot="content" id="operation-libraries_documents_delete_v1+code-samples+python">
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    mistral.beta.libraries.documents.delete(library_id="005daae9-d42e-407d-82d7-2261c6a1496c", document_id="edc236b0-baff-49a9-884b-4ca36a258da4")
-
-    # Use the SDK ...
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    mistral.beta.libraries.documents.delete(library_id=&quot;005daae9-d42e-407d-82d7-2261c6a1496c&quot;, document_id=&quot;edc236b0-baff-49a9-884b-4ca36a258da4&quot;)&NewLine;&NewLine;    # Use the SDK ...&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -10328,26 +10255,12 @@ Python
   id="operation-libraries_documents_get_text_content_v1+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.beta.libraries.documents.text_content(library_id="1d177215-3b6b-45ba-9fa9-baf773223bec", document_id="60214c91-2aba-4692-a4e6-a53365de8caf")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.beta.libraries.documents.text_content(library_id=&quot;1d177215-3b6b-45ba-9fa9-baf773223bec&quot;, document_id=&quot;60214c91-2aba-4692-a4e6-a53365de8caf&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -11332,26 +11245,12 @@ Python
   id="operation-libraries_documents_get_status_v1+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.beta.libraries.documents.status(library_id="e6906f70-368f-4155-80da-c1718f01bc43", document_id="2c904915-d831-4e9d-a345-8ce405bcef66")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.beta.libraries.documents.status(library_id=&quot;e6906f70-368f-4155-80da-c1718f01bc43&quot;, document_id=&quot;2c904915-d831-4e9d-a345-8ce405bcef66&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -12404,26 +12303,12 @@ Python
   id="operation-libraries_documents_get_signed_url_v1+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.beta.libraries.documents.get_signed_url(library_id="23cf6904-a602-4ee8-9f5b-8efc557c336d", document_id="48598486-df71-4994-acbb-1133c72efa8c")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.beta.libraries.documents.get_signed_url(library_id=&quot;23cf6904-a602-4ee8-9f5b-8efc557c336d&quot;, document_id=&quot;48598486-df71-4994-acbb-1133c72efa8c&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -13343,26 +13228,12 @@ Python
   id="operation-libraries_documents_get_extracted_text_signed_url_v1+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.beta.libraries.documents.extracted_text_signed_url(library_id="a6f15de3-1e82-4f95-af82-851499042ef8", document_id="9749d4f9-24e5-4ca2-99a3-a406863f805d")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.beta.libraries.documents.extracted_text_signed_url(library_id=&quot;a6f15de3-1e82-4f95-af82-851499042ef8&quot;, document_id=&quot;9749d4f9-24e5-4ca2-99a3-a406863f805d&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -14282,25 +14153,12 @@ Python
   id="operation-libraries_documents_reprocess_v1+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    mistral.beta.libraries.documents.reprocess(library_id="51b29371-de8f-4ba4-932b-a0bafb3a7f64", document_id="3052422c-49ca-45ac-a918-cadb35d61fd8")
-
-    # Use the SDK ...
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    mistral.beta.libraries.documents.reprocess(library_id=&quot;51b29371-de8f-4ba4-932b-a0bafb3a7f64&quot;, document_id=&quot;3052422c-49ca-45ac-a918-cadb35d61fd8&quot;)&NewLine;&NewLine;    # Use the SDK ...&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
