--- a/examples/docusaurus/docs/mistral/api/endpoint/files.mdx
+++ b/examples/docusaurus/docs/mistral/api/endpoint/files.mdx
@@ -6,7 +6,6 @@ sidebar_label: Files
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   CodeSampleTab,
   CodeSampleTabbedSection,
   DebugPlaceholder,
@@ -127,26 +126,12 @@ Python
 
 <SectionContent slot="content" id="operation-files_api_routes_list_files+code-samples+python">
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.files.list(page=0, page_size=100)
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.files.list(page=0, page_size=100)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -1268,29 +1253,12 @@ Python
 
 <SectionContent slot="content" id="operation-files_api_routes_upload_file+code-samples+python">
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.files.upload(file={
-        "file_name": "example.file",
-        "content": open("example.file", "rb"),
-    })
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.files.upload(file={&NewLine;        &quot;file_name&quot;: &quot;example.file&quot;,&NewLine;        &quot;content&quot;: open(&quot;example.file&quot;, &quot;rb&quot;),&NewLine;    })&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -2524,26 +2492,12 @@ Python
   id="operation-files_api_routes_retrieve_file+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.files.retrieve(file_id="f2a27685-ca4e-4dc2-9f2b-88c422c3e0f6")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.files.retrieve(file_id=&quot;f2a27685-ca4e-4dc2-9f2b-88c422c3e0f6&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -3493,26 +3447,12 @@ Python
 
 <SectionContent slot="content" id="operation-files_api_routes_delete_file+code-samples+python">
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.files.delete(file_id="3b6d45eb-e30b-416f-8019-f47e2e93d930")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.files.delete(file_id=&quot;3b6d45eb-e30b-416f-8019-f47e2e93d930&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -3890,26 +3830,12 @@ Python
   id="operation-files_api_routes_download_file+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.files.download(file_id="f8919994-a4a1-46b2-8b5b-06335a4300ce")
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.files.download(file_id=&quot;f8919994-a4a1-46b2-8b5b-06335a4300ce&quot;)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
@@ -4147,26 +4073,12 @@ Python
   id="operation-files_api_routes_get_signed_url+code-samples+python"
 >
 
-<CodeSample>
-
-```python
-from mistralai import Mistral
-import os
-
-
-with Mistral(
-    api_key=os.getenv("MISTRAL_API_KEY", ""),
-) as mistral:
-
-    res = mistral.files.get_signed_url(file_id="06a020ab-355c-49a6-b19d-304b7c01699f", expiry=24)
-
-    # Handle response
-    print(res)
-
-
-```
-
-</CodeSample>
+<TryItNow
+  language="python"
+  defaultValue="from mistralai import Mistral&NewLine;import os&NewLine;&NewLine;&NewLine;with Mistral(&NewLine;    api_key=os.getenv(&quot;MISTRAL_API_KEY&quot;, &quot;&quot;),&NewLine;) as mistral:&NewLine;&NewLine;    res = mistral.files.get_signed_url(file_id=&quot;06a020ab-355c-49a6-b19d-304b7c01699f&quot;, expiry=24)&NewLine;&NewLine;    # Handle response&NewLine;    print(res)&NewLine;&NewLine;"
+  dependencyUrlPrefix="/mistral-try-it-now"
+  dependencyUrl="/mistral-try-it-now/mistralai-1.9.11-py3-none-any.whl"
+/>
 
 </SectionContent>
 
